@@ -155,6 +155,7 @@ Nick Pellow
 Nicola Ken Barozzi
 Nico Seessle
 Nigel Magnay
+Oliver Rossmueller
 Patrick C. Beard
 Patrick Chanezon
 Patrick G. Heck (Gus Heck)
